Use <string>.formatted instead of static String.format